change fetch to openapi
