# api/openapi.yaml
@@ -5,7 +5,7 @@ info:
 servers:
   - url: 'http://localhost:4000/intrawiki-manage/api'
 paths:
-  "/auth":
+  "/auth/info":
     get:
       tags:
         - Auth
@@ -155,6 +155,23 @@ paths:
                 $ref: '#/components/schemas/ApiResultResponse'
 
   "/pages":
+    get:
+      tags:
+        - Pages
+      operationId: GetPageForTitle
+      parameters:
+        - name: title
+          in: query
+          required: true
+          schema:
+            type: string
+      responses:
+        default:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Page'
     put:
       tags:
         - Pages
